2003-04-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWindow.m: ([setFrameFromString:]) try to adjust sensibly
	for changes to screen size.
	([constrainFrameRect:toScreen:]) bugfix for positioning when the
	window origin is negative.

2003-04-26  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPanel.m
	Use controlBackgroundColor instead of lightGrayColor. Patch by Matt
	Rice (matt@vespertine.pc.ashlandfiber.net).
	* Headers/gnustep/gui/NSGraphics.h
	* Source/externs.m
	Added NSPatternColorSpace.
	* Source/NSColor.m
	[GSPatternColor colorSpaceName] uses NSPatternColorSpace.
	Corrected [blendedColorWithFraction:ofColor:], where self and aColor
	where exchanged and alpha handling was missing.
	* Source/NSWindow.m
	Removed unused local variable in [sendEvent:].
	* Source/NSSliderCell.m
	Basic implementation of the tick mark methods. Added en-/decoding
	for tick marks. [setKnobThickness:], [setNumberOfTickMarks:] and
	[setTickMarkPosition:] now update the control.
	
2003-04-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSavePanel.m: Track window resizing and adjust browser
	columns to match.  Use larger minimum width.

2003-04-21  Serg Stoyan <stoyan@hologr.com>

	* Source/NSMenuView.m:
	(mouseDown:): Generate periodic events every 0.01 seconds.
	
2003-04-17  Serg Stoyan <stoyan@hologr.com>

	* Source/NSMenuItemCell.m:
	(setMenuView:): Removed setting image position and
	_mcell_belongs_to_popupbutton ivar for popup button cell.
	(calcSize): Removed code from setMenuView placed here.
	
2003-04-13 Michael Hanni  <michael@deviant-behavior.com>

	* Images/common_WMCloseBroken.tiff,common_WMClose.tiff: remove 
	background of image.

Mon Apr 14 14:24:27 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/gui/AppKit.h: Include NSDocument.h

2003-04-14  Serg Stoyan <stoyan@hologr.com>

	* Source/NSApplication.m:
	(setImageForWindowsItem:): Do not add "X" image if window has 
	no close button.
	
2003-04-13 Michael Hanni  <michael@deviant-behavior.com>
